[B]Version 0.2.1[/B]
### shows information on pages such as: http://www.solarmovie.so/profile/MasterofMovies120/
- "Users" section >> * >> Person >> "Account"
- Added: Listing for Latest Searches.
### Contact information should be found @ http://www.solarmovie.so/contacts.html
### Rules should be found @ http://www.solarmovie.so/rules.html
- Added: Terms of Service ( Mostly a copy from http://www.solarmovie.so/terms.html )
- Added: Privacy Policy ( Mostly a copy from http://www.solarmovie.so/privacy-policy.html )
- Fix: setview working correctly for Favorites List.
- Removed extra -Comin Soon- from Movies Category list.

[B]Version 0.2.0[/B]
### https://github.com/HIGHWAY99/plugin.video.solarmovie.so/wiki
- Might have forgotten to meantion, but I've been working a ton on the plugin's Wiki pages. So please check them out.
### ### Favorites - Uses the same listing methods as Uploads.
### ### Uploads - I made a new listing method for these pages.  This new method displays both Movies and TV Episodes together, for pages that use this less-information style of listing.  There is currently less metadata and information displayed.
### ### Watch List (TV Shows) - Uses the same as Watch List (Movies), just with 'tv' marked as the section.
### ### Watch List (Movies) - Uses the old default listItems() method, but with a 2nd parse string included now.
### For a moment the areas include: 
- Users >> Moderators|Linkers|Uploaders|Users >> Person >> Once you have chosen a person yo ucan then select what area of their recorded data you wish to browse.
- Users >> Choose From Moderators, Linkers, Uploaders, or Users to Sort Users by.
- Users - New Section to this plugin to address the Browsing of Users for sake of future posible features and browsing methods.
- Latest Threads -- This allows you to check out the Latest Threads sectcion of the main page @ http://www.solarmovie.so/
- Play Trailer -- For use with the "Coming Soon" section.