@@ -12,7 +12,8 @@ __authors__	=	"The Highway"
 plugin_id		=	"plugin.video.solarmovie.so"
 ### ############################################################################################################
 ### ############################################################################################################
-import xbmc,xbmcplugin,xbmcgui,xbmcaddon,xbmcvfs,requests
+import xbmc,xbmcplugin,xbmcgui,xbmcaddon,xbmcvfs
+#import requests
 import urllib,urllib2,re,os,sys,htmllib,string,StringIO,logging,random,array,time,datetime
 import urlresolver
 import copy
